# Xmatch

./: .gitignore  LICENSE  README  Xmatch.py  default.css  index.html
BoostXmatch/: BoostXmatch.sln  CMakeLists.txt  Todo.txt
BoostXmatch/BoostXmatch/: BoostXmatch.cpp  BoostXmatch.cu  BoostXmatch.vcxproj  BoostXmatch.vcxproj.filters  CMakeLists.txt  Common.cu  Common.h  CuXmatch.cu  CudaContext.cpp  CudaContext.h  CudaManager.cpp  CudaManager.h  Debug Switches.txt  Hello.cpp  Hello.cu  Hello.h  Job.cpp  Job.h  JobManager.cpp  JobManager.h  Log.cpp  Log.h  Makefile  Obj.cpp  Obj.cu  Obj.h  Segment.cpp  Segment.cu  Segment.h  SegmentManager.cpp  SegmentManager.h  Sorter.cpp  Sorter.cu  Sorter.h  Worker.cpp  Worker.cu  Worker.h
CuXmatch/: CuXmatch.sln  ReadMe.txt
CuXmatch/CuXmatch/: BinConv.c  CuXmatch.cu  CuXmatch.vcproj  CuXmatch.vcxproj  ReadMe.txt  Todo.txt  make.cmd
Data/: test.idradec  test2.idradec
Doc/: default.css~  index.html  index.html~
ThreadXmatch/ThreadXmatch/: Makefile  ThreadXmatch.cpp  kernel.cu
